cmake_minimum_required(VERSION 3.20)
project(luogu)

set(CMAKE_CXX_STANDARD 14)

#add_executable(luogu main.cpp)

add_executable(main main.cpp)

add_executable(P3150 P3150.cpp)
add_executable(P2367 P2367.cpp)

add_executable(P4552 P4552.cpp)
add_executable(Acwing799 Acwing799.cpp)
add_executable(P2249 P2249.cpp)
add_executable(P5707 P5707.cpp)
add_executable(P1217 P1217.cpp)
add_executable(P1909 P1909.cpp)
add_executable(P5729 P5729.cpp)
add_executable(P2550 P2550.cpp)
add_executable(P2615 P2615.cpp)
add_executable(P1554 P1554.cpp)
add_executable(P2911 P2911.cpp)
add_executable(P1319 P1319.cpp)
add_executable(P3916 P3916.cpp)
add_executable(P1157 P1157.cpp)
add_executable(P1443 P1443.cpp)
add_executable(P1957 P1957.cpp)
add_executable(P2872 P2872.cpp)
add_executable(P2043 P2043.cpp)
add_executable(P1219 P1219.cpp)
add_executable(P1506 P1506.cpp)
add_executable(P1162 P1162.cpp)
add_executable(P5318 P5318.cpp)
add_executable(P1807 P1807.cpp)
add_executable(P1143 P1143.cpp)
add_executable(P1866 P1866.cpp)
add_executable(P4387 P4387.cpp)