cmake_minimum_required(VERSION 3.20)
project(luogu)

set(CMAKE_CXX_STANDARD 14)

#add_executable(luogu main.cpp)

add_executable(main main.cpp)

add_executable(P3150 P3150.cpp)
add_executable(P2367 P2367.cpp)

add_executable(P4552 P4552.cpp)
add_executable(Acwing799 Acwing799.cpp)
add_executable(P2249 P2249.cpp)
add_executable(P5707 P5707.cpp)
add_executable(P1217 P1217.cpp)
add_executable(P1909 branch/P1909.cpp)
add_executable(P5729 P5729.cpp)
add_executable(P2550 P2550.cpp)
add_executable(P2615 P2615.cpp)
add_executable(P1554 P1554.cpp)
add_executable(P2911 P2911.cpp)
add_executable(P1319 P1319.cpp)
add_executable(P3916 P3916.cpp)
add_executable(P1157 P1157.cpp)
add_executable(P1443 P1443.cpp)
add_executable(P1957 str/P1957.cpp)
add_executable(P2872 P2872.cpp)
add_executable(P2043 P2043.cpp)
add_executable(P1219 P1219.cpp)
add_executable(P1506 P1506.cpp)
add_executable(P1162 P1162.cpp)
add_executable(P5318 P5318.cpp)
add_executable(P1807 P1807.cpp)
add_executable(P1143 P1143.cpp)
add_executable(P1866 P1866.cpp)
add_executable(P4387 P4387.cpp)
add_executable(P5710 branch/P5710.cpp)
add_executable(P5711 branch/P5711.cpp)
add_executable(P5712 branch/P5712.cpp)
add_executable(P5713 branch/P5713.cpp)
add_executable(P5714 branch/P5714.cpp)
add_executable(P5715 branch/P5715.cpp)
add_executable(P5716 branch/P5716.cpp)
add_executable(P1085 branch/P1085.cpp)
add_executable(P1055 branch/P1055.cpp)
add_executable(P1422 branch/P1422.cpp)
add_executable(P1888 branch/P1888.cpp)
add_executable(P1046 branch/P1046.cpp)
add_executable(P5717 branch/P5717.cpp)
add_executable(P4414 branch/P4414.cpp)
add_executable(P5718 circulate/P5718.cpp)
add_executable(P5719 circulate/P5719.cpp)
add_executable(P5720 circulate/P5720.cpp)
add_executable(P5721 circulate/P5721.cpp)
add_executable(P1980 circulate/P1980.cpp)
add_executable(P1035 circulate/P1035.cpp)
add_executable(P2669 circulate/P2669.cpp)
add_executable(P5722 circulate/P5722.cpp)
add_executable(P1428 array/P1428.cpp)
add_executable(P1427 array/P1427.cpp)
add_executable(P5727 array/P5727.cpp)
add_executable(P1047 array/P1047.cpp)
add_executable(P1216 dp/P1216.cpp)
add_executable(P1616 dp/P1616.cpp)
add_executable(P1048 dp/P1048.cpp)
add_executable(P1802 dp/P1802.cpp)
add_executable(Frog1 Frog1.cpp)
add_executable(P1125 str/P1125.cpp)

add_executable(P1308 str/P1308.cpp)